[package]
authors = ["Drew Stone <drewstone329@gmail.com>"]
edition = "2018"
name = "webb-primitives"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { default-features = false, features = ["derive", "max-encoded-len"], package = "parity-scale-codec", version = "3" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.119", optional = true, features = ["derive"] }
sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-consensus-babe = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }

# Arkworks
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = ["curve"], optional = true }
ark-bn254 = { version = "^0.3.0", default-features = false, features = ["curve"], optional = true }
ark-ec = { version = "^0.3.0", default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
ark-groth16 = { optional=true, git = "https://github.com/arkworks-rs/groth16", rev = "765817f", default-features = false, features = ["parallel"] }
# ark-groth16 = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false, features = ["derive"] }
ark-std = { version = "^0.3.0", default-features = false }

byteorder = { version = "1", default-features = false }
blake2 = { version = "0.9", default-features = false }
digest = { version = "0.9", default-features = false }

ark-crypto-primitives = { version = "^0.3.0", default-features = false }
arkworks-native-gadgets = { version = "1.2.0", default-features = false, optional = true }

ethabi = { version = "15.0.0", default-features = false }

webb-proposals = { git = "https://github.com/webb-tools/webb-rs", default-features = false, features = ["scale", "substrate", "evm"] }

[features]
default = ["std", "hashing", "verifying", "field_ops"]
field_ops = [
  "ark-bls12-381",
  "ark-bn254",
]
hashing = [
  "arkworks-native-gadgets",
  "ark-bls12-381",
  "ark-bn254",
]
std = [
  "serde",
  "codec/std",
  "frame-support/std",
  "sp-core/std",
  "sp-std/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-consensus-aura/std",
  "sp-consensus-babe/std",
  "ark-ff/std",
  "ark-ec/std",
  "ark-std/std",
  "ark-relations/std",
  "webb-proposals/std",
]
verifying = [
  "arkworks-native-gadgets",
  "ark-bls12-381",
  "ark-bn254",
  "ark-groth16/parallel"
]
