[package]
authors = ["Webb Technologies Inc."]
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "node-template-runtime"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }

[dependencies]
hex-literal = { optional = true, version = "0.3.1" }
serde = { features = ["derive"], optional = true, version = "1.0.119" }
codec = { default-features = false, features = ["derive", "max-encoded-len"], package = "parity-scale-codec", version = "2.2.0" }

# local dependencies
pallet-hasher = { path = "../pallets/hasher", default-features = false }
pallet-verifier = { path = "../pallets/verifier", default-features = false }
pallet-mt = { path = "../pallets/mt", default-features = false }
pallet-mixer = { path = "../pallets/mixer", default-features = false }
pallet-anchor = { path = "../pallets/anchor", default-features = false }
pallet-bridge = { path = "../pallets/bridge", default-features = false }
pallet-asset-registry = { path = "../pallets/asset-registry", default-features = false }
pallet-anchor-handler = { path = "../pallets/anchor-handler", default-features = false }
darkwebb-primitives = { path = "../primitives", default-features = false, features = ["hashing"] }
orml-traits = { path = "../open-runtime-module-library/traits", default-features = false }
orml-tokens = { path = "../open-runtime-module-library/tokens", default-features = false }
orml-currencies = { path = "../open-runtime-module-library/currencies", default-features = false }

# Substrate dependencies
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
frame-benchmarking = { default-features = false, optional = true, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-executive = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-support = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-system = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-system-benchmarking = { default-features = false, optional = true, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-system-rpc-runtime-api = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-aura = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-balances = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-grandpa = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-randomness-collective-flip = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-sudo = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-timestamp = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-transaction-payment = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-api = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-block-builder = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-consensus-aura = { default-features = false, version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-core = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-inherents = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-offchain = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-session = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-std = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-transaction-pool = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-version = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }

[features]
default = ["std"]
runtime-benchmarks = [
    "hex-literal",
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
std = [
    "codec/std",
    "serde",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-grandpa/std",
    "pallet-randomness-collective-flip/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",

    "darkwebb-primitives/std",
    "pallet-hasher/std",
    "pallet-verifier/std",
    "pallet-mt/std",
    "pallet-mixer/std",
    "pallet-anchor/std",
    "pallet-bridge/std",
    "pallet-asset-registry/std",
    "pallet-anchor-handler/std",
    "orml-traits/std",
    "orml-tokens/std",
    "orml-currencies/std",
]
