[package]
authors = ["Webb Technologies Inc."]
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "webb-runtime"
repository = "https://github.com/webb-tools/protocol-substrate"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }

[dependencies]
codec = {package = "parity-scale-codec", version = "2.3.0", default-features = false, features = ["derive", "max-encoded-len"]}
hex-literal = {version = "0.3.3", optional = true}
log = {version = "0.4.14", default-features = false }
scale-info = {version = "1.0.0", default-features = false, features = ["derive"]}
serde = {version = "1.0.101", optional = true, features = ["derive"]}
smallvec = "1.6.1"
# local dependencies
common = { path = "../common", default-features = false }
webb-primitives = { path = "../primitives", default-features = false, features = ["hashing"] }

pallet-hasher = { path = "../pallets/hasher", default-features = false }
pallet-mt = { path = "../pallets/mt", default-features = false }
pallet-linkable-tree = { path = "../pallets/linkable-tree", default-features = false }
pallet-mt-rpc-runtime-api = { path = "../pallets/mt/rpc/runtime-api", default-features = false }
pallet-verifier = { path = "../pallets/verifier", default-features = false }
pallet-parachain-staking = { path = "../pallets/parachain-staking", default-features = false }

orml-currencies = { path = "../open-runtime-module-library/currencies", default-features = false }
orml-tokens = { path = "../open-runtime-module-library/tokens", default-features = false }
orml-traits = { path = "../open-runtime-module-library/traits", default-features = false }
pallet-anchor = { path = "../pallets/anchor", default-features = false }
pallet-anchor-handler = { path = "../pallets/anchor-handler", default-features = false }
pallet-asset-registry = { path = "../pallets/asset-registry", default-features = false }
pallet-bridge = { path = "../pallets/bridge", default-features = false }
pallet-hello = { path = "../pallets/hello", default-features = false }
pallet-mixer = { path = "../pallets/mixer", default-features = false }
pallet-token-wrapper = { path = "../pallets/token-wrapper", default-features = false }

# Substrate dependencies
sp-api = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
sp-block-builder = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
sp-consensus-aura = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
sp-core = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
sp-inherents = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
sp-io = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
sp-offchain = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
sp-runtime = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
sp-session = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
sp-std = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
sp-transaction-pool = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
sp-version = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }

frame-benchmarking = {git = "https://github.com/paritytech/substrate", optional = true, default-features = false, branch = "polkadot-v0.9.17" }
frame-executive = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
frame-support = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
frame-system = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
frame-system-benchmarking = {git = "https://github.com/paritytech/substrate", optional = true, default-features = false, branch = "polkadot-v0.9.17" }
frame-system-rpc-runtime-api = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
pallet-assets = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
pallet-aura = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
pallet-authorship = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
pallet-balances = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
pallet-bounties = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
pallet-child-bounties = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
pallet-collective = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
pallet-multisig = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
pallet-proxy = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
pallet-randomness-collective-flip = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
pallet-session = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
pallet-session-benchmarking = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17", optional = true}
pallet-sudo = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
pallet-timestamp = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
pallet-transaction-payment = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
pallet-transaction-payment-rpc-runtime-api = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
pallet-treasury = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
pallet-utility = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }

# cumulus
cumulus-pallet-aura-ext = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.17", default-features = false }
cumulus-pallet-dmp-queue = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.17", default-features = false }
cumulus-pallet-parachain-system = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.17", default-features = false }
cumulus-pallet-xcm = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.17", default-features = false }
cumulus-pallet-xcmp-queue = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.17", default-features = false }
cumulus-primitives-core = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.17", default-features = false }
cumulus-primitives-timestamp = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.17", default-features = false }
cumulus-primitives-utility = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.17", default-features = false }
parachain-info = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.17", default-features = false }

# polkadot
# polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.17", default-features = false }
# polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.17", default-features = false }
# xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.17", default-features = false }
# xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.17", default-features = false }
# xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.17", default-features = false }
# pallet-xcm = { version="0.9.11", git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.17", default-features = false }

pallet-xcm = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.17", default-features = false }
polkadot-parachain = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.17", default-features = false }
polkadot-runtime-common = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.17", default-features = false }
xcm = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.17", default-features = false }
xcm-builder = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.17", default-features = false }
xcm-executor = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.17", default-features = false }

[features]
default = ["std"]
runtime-benchmarks = [
  "hex-literal",
  "sp-runtime/runtime-benchmarks",
  "xcm-builder/runtime-benchmarks",
  "frame-benchmarking",
  "frame-system-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-hasher/runtime-benchmarks",
  "pallet-verifier/runtime-benchmarks",
  "pallet-mt/runtime-benchmarks",
  "pallet-linkable-tree/runtime-benchmarks",
  "pallet-mixer/runtime-benchmarks",
  "pallet-anchor/runtime-benchmarks",
  "pallet-anchor-handler/runtime-benchmarks",
  "pallet-asset-registry/runtime-benchmarks",
  "pallet-bridge/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "pallet-xcm/runtime-benchmarks",
  "pallet-collective/runtime-benchmarks",
  "pallet-parachain-staking/runtime-benchmarks",
  "pallet-token-wrapper/runtime-benchmarks"
]

std = [
  "codec/std",
  "scale-info/std",
  "serde",
  "log/std",
  "sp-api/std",
  "sp-std/std",
  "sp-io/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-version/std",
  "sp-offchain/std",
  "sp-session/std",
  "sp-block-builder/std",
  "sp-transaction-pool/std",
  "sp-inherents/std",
  "frame-support/std",
  "frame-executive/std",
  "frame-system/std",
  "frame-system-rpc-runtime-api/std",
  "pallet-assets/std",
  "pallet-authorship/std",
  "pallet-aura/std",
  "pallet-balances/std",
  "pallet-collective/std",
  "pallet-multisig/std",
  "pallet-proxy/std",
  "pallet-randomness-collective-flip/std",
  "pallet-session/std",
  "pallet-sudo/std",
  "pallet-timestamp/std",
  "pallet-transaction-payment/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
  "pallet-utility/std",
  "parachain-info/std",
  "cumulus-pallet-aura-ext/std",
  "cumulus-pallet-parachain-system/std",
  "cumulus-pallet-xcm/std",
  "cumulus-pallet-xcmp-queue/std",
  "cumulus-primitives-core/std",
  "cumulus-primitives-timestamp/std",
  "cumulus-primitives-utility/std",
  "cumulus-pallet-dmp-queue/std",
  "parachain-info/std",
  "polkadot-parachain/std",
  "polkadot-runtime-common/std",
  "xcm-builder/std",
  "xcm-executor/std",
  "xcm/std",
  "sp-consensus-aura/std",
  "webb-primitives/std",
  "common/std",
  "pallet-hasher/std",
  "pallet-verifier/std",
  "pallet-mt/std",
  "pallet-linkable-tree/std",
  "pallet-mixer/std",
  "pallet-anchor/std",
  "pallet-bridge/std",
  "pallet-asset-registry/std",
  "pallet-anchor-handler/std",
  "pallet-mt-rpc-runtime-api/std",
  "pallet-hello/std",
  "pallet-treasury/std",
  "pallet-token-wrapper/std",
  "pallet-child-bounties/std",
  "pallet-bounties/std",
  "pallet-parachain-staking/std"
]
