[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webb = { git = "https://github.com/webb-tools/webb-rs.git", default-features = false }

[features]
default = ["webb/substrate-runtime"]