[package]
name = "webb-primitives"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
scale-info = { version = "0.10.0", default-features = false, features = ["derive"], optional = true }

sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sp-externalities = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }

sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

multi-party-ecdsa = { git = "https://github.com/ZenGo-X/multi-party-ecdsa.git" }
curv = { package = "curv-kzen", version = "0.7.1" }

[dev-dependencies]
hex-literal = "0.3"

sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-externalities/std",
	"sp-runtime/std",
	"sp-std/std",
]
