[package]
authors = ["Webb Technologies Inc."]
description = "FRAME pallet for Webb bridge."
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "pallet-anchor-handler"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
version = "3.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "2.0.0"

[dependencies]
# third-party dependencies
serde = { version = "1.0.101", optional = true }

# frame dependencies
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-arithmetic = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-mt = { path = "../mt" , default-features = false}
pallet-anchor = { path = "../anchor" , default-features = false}
pallet-bridge = { path = "../bridge" , default-features = false}

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-hasher = { path = "../hasher", default-features = false }
pallet-mixer = { path = "../mixer", default-features = false }
pallet-mt = { path = "../mt", default-features = false }
pallet-verifier = { path = "../verifier", default-features = false }
darkwebb-primitives = { path = "../../primitives", default-features = false }
ark-crypto-primitives = { version = "^0.3.0", features = ["r1cs"], default-features = false }

[build-dependencies]
wasm-builder-runner = { version = "2.0.0", package = "substrate-wasm-builder-runner" }
[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
    "sp-io/std",
    "sp-core/std",
    "sp-arithmetic/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-bridge/std",
	"pallet-hasher/std",
    "pallet-mt/std",
    "pallet-mixer/std",
    "pallet-verifier/std",
    "darkwebb-primitives/std",
]
