[package]
authors = ["Webb Technologies Inc."]
description = "FRAME pallet for Webb anchor-handler."
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "pallet-anchor-handler"
repository = "https://github.com/webb-tools/protocol-substrate"
version = "1.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# third-party dependencies
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "max-encoded-len"] }

# frame dependencies
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-arithmetic = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
pallet-mt = { path = "../mt", default-features = false }
pallet-linkable-tree = { path = "../linkable-tree", default-features = false }
pallet-anchor = { path = "../anchor", default-features = false }
pallet-bridge = { path = "../bridge", default-features = false }
pallet-signature-bridge = { path = "../signature-bridge", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", default-features = false }
webb-primitives = { path = "../../primitives", default-features = false }
pallet-asset-registry = { path = "../asset-registry", default-features = false }

frame-system-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26", optional = true }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26", optional = true }

hex-literal = "0.3.4"

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
pallet-hasher = { path = "../hasher", default-features = false }
pallet-mixer = { path = "../mixer", default-features = false }
pallet-mt = { path = "../mt", default-features = false }
pallet-linkable-tree = { path = "../linkable-tree", default-features = false }
pallet-verifier = { path = "../verifier", default-features = false }
webb-primitives = { path = "../../primitives", default-features = false }
ark-crypto-primitives = { version = "^0.3.0", features = ["r1cs"], default-features = false }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", default-features = false }
orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", default-features = false }

ark-bn254 = { version = "^0.3.0", default-features = false, features = ["curve"] }
arkworks-setups = { version = "1.0.0", features = ["r1cs"], default-features = false }

webb-proposals = { version = "0.3.6", default-features = false, features = ["scale", "substrate"] }


[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-core/std",
	"sp-arithmetic/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-mt/std",
	"pallet-anchor/std",
	"pallet-bridge/std",
	"pallet-signature-bridge/std",
	"orml-traits/std",
	"webb-primitives/std",
	"pallet-asset-registry/std",
]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
]
