[package]
authors = ["Webb Technologies Inc."]
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "pallet-anchor"
version = "1.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

frame-support = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-system = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-std = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-hasher = { path = "../hasher", default-features = false }
pallet-mixer = { path = "../mixer", default-features = false }
pallet-mt = { path = "../mt", default-features = false }
pallet-verifier = { path = "../verifier", default-features = false }
darkwebb-primitives = { path = "../../primitives", default-features = false }
orml-traits = { path = "../../open-runtime-module-library/traits", default-features = false }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-io = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-balances = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
ark-crypto-primitives = { version = "^0.3.0", features = ["r1cs"], default-features = false }
orml-tokens = { path = "../../open-runtime-module-library/tokens", default-features = false }
orml-currencies = { path = "../../open-runtime-module-library/currencies", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "pallet-hasher/std",
    "pallet-mt/std",
    "pallet-mixer/std",
    "pallet-verifier/std",
    "darkwebb-primitives/std",
]
